<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="@color/white"
android:orientation="vertical">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingLeft="10dp"
    tools:context="com.coder.frank.learnize.Student"
    tools:ignore="RtlSymmetry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageButton
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/ta"></ImageButton>
        <ImageButton
            android:id="@+id/t2"
            android:layout_width="wrap_content"
            android:layout_marginLeft="4mm"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:onClick="onSubject"
            android:src="@drawable/tb"></ImageButton>
        <ImageButton
            android:id="@+id/t3"
            android:layout_width="wrap_content"
            android:layout_marginLeft="3mm"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/tc"></ImageButton>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="30dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9mm"
            android:text="Subjects"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6mm"
            android:text="Class\nTimetable"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"></TextView>





    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageButton
            android:id="@+id/t4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:onClick="onDisplay"
            android:src="@drawable/td"></ImageButton>
        <ImageButton
            android:id="@+id/t5"
            android:layout_width="wrap_content"
            android:layout_marginLeft="4mm"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:onClick="onAdd"
            android:src="@drawable/te"></ImageButton>
        <ImageButton
            android:id="@+id/t6"
            android:layout_width="wrap_content"
            android:layout_marginLeft="3mm"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/tf"></ImageButton>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="30dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Student\nDetails"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9mm"
            android:text="Add\nStudent"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9mm"
            android:text="Modify\nStudent"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageButton
            android:id="@+id/t7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/tg"></ImageButton>
        <ImageButton
            android:id="@+id/t8"
            android:layout_width="wrap_content"
            android:layout_marginLeft="4mm"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/th"></ImageButton>
        <ImageButton
            android:id="@+id/t9"
            android:layout_width="wrap_content"
            android:layout_marginLeft="3mm"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/ti"></ImageButton>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="30dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete\nStudent"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9mm"
            android:text="@string/exam_nresults"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6mm"
            android:text="@string/announcements"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"></TextView>





    </LinearLayout>
</LinearLayout>
</ScrollView>
